# libs/shared/data-access/data-access-api/src/lib/model/item-with-list-name-response.model.ts
@@ -1,0 +1,21 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ItemWithListNameResponse {
+    id?: number;
+    listId?: number;
+    listName?: string;
+    name?: string;
+    description?: string;
+    isBought?: boolean;
+    createdAt?: Date;
+}
+
