# libs/shared/data-access/data-access-api/src/lib/model/models.ts
@@ -3,11 +3,17 @@ export * from './create-shopping-list-request.model';
 export * from './granted-authority.model';
 export * from './item.model';
 export * from './item-response.model';
+export * from './item-with-list-name-response.model';
+export * from './page-shopping-list-summary-response.model';
+export * from './pageable.model';
+export * from './pageable-object.model';
 export * from './problem-detail.model';
 export * from './shopping-list.model';
 export * from './shopping-list-response.model';
 export * from './shopping-list-share.model';
 export * from './shopping-list-share-id.model';
+export * from './shopping-list-summary-response.model';
+export * from './sort-object.model';
 export * from './update-item-request.model';
 export * from './user.model';
 export * from './user-login-request.model';
