# libs/shared/data-access/data-access-api/src/lib/model/page-shopping-list-summary-response.model.ts
@@ -1,0 +1,28 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { PageableObject } from './pageable-object.model';
+import { SortObject } from './sort-object.model';
+import { ShoppingListSummaryResponse } from './shopping-list-summary-response.model';
+
+
+export interface PageShoppingListSummaryResponse {
+    totalElements?: number;
+    totalPages?: number;
+    first?: boolean;
+    last?: boolean;
+    size?: number;
+    content?: Array<ShoppingListSummaryResponse>;
+    number?: number;
+    sort?: SortObject;
+    pageable?: PageableObject;
+    numberOfElements?: number;
+    empty?: boolean;
+}
+
