# libs/shared/data-access/data-access-api/src/lib/model/pageable-object.model.ts
@@ -1,0 +1,21 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { SortObject } from './sort-object.model';
+
+
+export interface PageableObject {
+    offset?: number;
+    sort?: SortObject;
+    paged?: boolean;
+    unpaged?: boolean;
+    pageNumber?: number;
+    pageSize?: number;
+}
+
