# libs/shared/data-access/data-access-api/src/lib/model/shopping-list-summary-response.model.ts
@@ -1,0 +1,23 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ShoppingListSummaryResponse {
+    id?: number;
+    name?: string;
+    ownerId?: number;
+    isOwner?: boolean;
+    shareToken?: string;
+    createdAt?: Date;
+    updatedAt?: Date;
+    itemCount?: number;
+    boughtItemCount?: number;
+}
+
