# libs/shared/data-access/data-access-api/src/lib/model/sort-object.model.ts
@@ -1,0 +1,17 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface SortObject {
+    empty?: boolean;
+    sorted?: boolean;
+    unsorted?: boolean;
+}
+
